# scMagnifier-main

./: LICENSE  README.md
scMagnifier_package/: setup.cfg
scMagnifier_package/env/: scMagnifier.yml  stagate_scMagnifier.yml
scMagnifier_package/scMagnifier/: TFscore_core.py  __init__.py  consensus_core.py  grn_core.py  merge_core.py  multi_consensus_core.py  multi_merge_core.py  multi_perturb_core.py  multi_preprocess_core.py  perturb_core.py  preprocess_core.py  spatial_preperturb_core.py  umap_compare_core.py
scMagnifier_package/stagate_scMagnifier/: __init__.py  spatial_consensus_core.py  spatial_merge_core.py  spatial_perturb_core.py  spatial_preprocess_core.py
