[metadata]
name = scMagnifier  
version = 0.1.0
author = Zhenhui He
author_email = hezhenhui@ruc.edu.cn
description = resolving fine-grained cell subtypes via GRN-informed perturbations and consensus clustering
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:  

[options.packages.find]
where = .  
include = scMagnifier, stagate_scMagnifier